--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
   <!-- Quote slideshow small -->
   <div class="quoteContainerSmall w3-hide-large">
     <h2 class="quoteContainerTitle w3-center">A Bit More</h2>
-    <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
+    <p class="item-1">Sign up to our Mailing List!<br><a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">The main software that we are using:     
       <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
-    <p class="item-3">Follow us on social media!<a href="https://beacons.ai/astralforge" target="_blank">Click Here!</a></p>  
+    <p class="item-3">Follow us on social media!<br><a class="qLinks" href="https://beacons.ai/astralforge" target="_blank">Click Here!</a></p>  
   </div>
   <!-- Quote slideshow large -->
   <div class="quoteContainerLarge w3-hide-small w3-hide-medium">
@@ -127,7 +127,7 @@
       <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
-    <p class="item-3">Follow us on social media!<a href="https://beacons.ai/astralforge" target="_blank">Click Here!</a></p>
+    <p class="item-3">Follow us on social media!<br><a class="qLinks" href="https://beacons.ai/astralforge" target="_blank">Click Here!</a></p>
   </div>
 
   <br>
