--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <!-- Quote slideshow small -->
   <div class="quoteContainerSmall w3-hide-large">
     <h2 class="quoteContainerTitle w3-center">A Bit More:</h2>
-    <p class="item-1">Sign up to our Mailing List!<br><a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
+    <p class="item-1">Sign up to our Mailing List!<br><a class="qLinks" href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">The main software that we are using:     
       <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
@@ -121,7 +121,7 @@
   <!-- Quote slideshow large -->
   <div class="quoteContainerLarge w3-hide-small w3-hide-medium">
     <h2 class="quoteContainerTitle w3-center">A Bit More:</h2>
-    <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
+    <p class="item-1">Sign up to our Mailing List!<br> <a class="qLinks" href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">The main software that we are using:  
       <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
