--- a/team.html
+++ b/team.html
@@ -72,10 +72,10 @@
       <div class="w3-col w3-container w3-third">
         <img class="teamImage" src="TeamPhotos/AK.jpg" alt="Abbygale D with Keanu Reeves">
         <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
-        <h3 class="w3-center">Director, Programmer, Designer</h3>
-          <p class="w3-center" style="font-size:125%;">Abbygale is the founder</p>
-          <a href="https://beacons.ai/Island_Tiger" target="_blank"><p class="teamFollow">Follow on:</p></a>
-          <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="teamFollow" style="padding-left:10px;" src="Images/LinkedInLogo.png"></a>
+        <h4 class="w3-center">Director, Programmer, Designer</h4>
+        <p class="w3-center" style="font-size:125%;">Abbygale is the founder</p>
+        <a href="https://beacons.ai/Island_Tiger" target="_blank"><p class="teamFollow">Follow on:</p></a>
+        <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
       
       <div class="w3-col w3-container w3-third w3-center">
