--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
      <!-- Team Photos -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
-        <img class="teamImage" src="TeamPhotos/AK.jpg" alt="Abbygale D with Keanu Reeves">
+        <img class="teamImage" src="Images/Abby.jpg" alt="Abbygale Dunn">
         <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
         <h4 class="w3-center">Director, Programmer, Designer</h4>
         <p class="w3-center" style="font-size:125%;">Abbygale is the founder</p>
