--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
 
      <!-- Team Photos -->
     <div class="w3-row">
-      <div class="w3-col w3-container w3-third">
+      <div class="w3-col w3-container w3-third teamPlace">
         <img class="w3-center teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn">
         <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
         <h4 class="w3-center">Director, Programmer, Designer</h4>
@@ -78,7 +78,7 @@
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
       
-      <div class="w3-col w3-container w3-third">
+      <div class="w3-col w3-container w3-third teamPlace">
         <img class="w3-center teamImage" src="Images/AbbyJPG.jpg" alt="Jack Edwards">
         <h2 class="w3-center"><b>Jack Edwards</b></h2>
         <h4 class="w3-center">Animator, Designer</h4>
@@ -87,7 +87,7 @@
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
       
-      <div class="w3-col w3-container w3-third">
+      <div class="w3-col w3-container w3-third teamPlace">
         <img class="w3-center teamImage" src="Images/AbbyJPG.jpg" alt="Mary-Jane Law">
         <h2 class="w3-center"><b>Mary-Jane Law</b></h2>
         <h4 class="w3-center">Programmer, Designer</h4>
