--- a/team.html
+++ b/team.html
@@ -70,9 +70,9 @@
      <!-- Team Photos -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
-        <img class="w3-center teamImage teamPlace" src="Images/Abby.JPG" alt="Abbygale Dunn">
-        <h2 class="w3-center teamPlace"><b>Abbygale Dunn</b></h2>
-        <h4 class="w3-center teamPlace">Director, Programmer, Designer</h4>
+        <img class="w3-center teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn">
+        <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
+        <h4 class="w3-center">Director, Programmer, Designer</h4>
         <p class="w3-center" style="font-size:125%;">Abbygale is the founder</p>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
