--- a/team.html
+++ b/team.html
@@ -73,7 +73,7 @@
         <img class="w3-center teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn">
         <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
         <h4 class="w3-center">Director, Programmer, Designer</h4>
-        <p class="w3-center" style="font-size:125%;">Abbygale is the founder</p>
+        <p class="w3-center">Abbygale is the founder</p>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
@@ -82,7 +82,7 @@
         <img class="w3-center teamImage" src="Images/AbbyJPG.jpg" alt="Jack Edwards">
         <h2 class="w3-center"><b>Jack Edwards</b></h2>
         <h4 class="w3-center">Animator, Designer</h4>
-        <p class="w3-center" style="font-size:125%;">Abbygale is the founder</p>
+        <p class="w3-center">Jack</p>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
@@ -91,7 +91,7 @@
         <img class="w3-center teamImage" src="Images/AbbyJPG.jpg" alt="Mary-Jane Law">
         <h2 class="w3-center"><b>Mary-Jane Law</b></h2>
         <h4 class="w3-center">Programmer, Designer</h4>
-        <p class="w3-center" style="font-size:125%;">Abbygale is the founder</p>
+        <p class="w3-center">Mary</p>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
