--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
 
      <!-- Team Photos -->
     <div class="w3-row">
-      <div class="w3-col w3-container w3-third">
+      <div class="w3-col w3-container w3-third w3-center">
         <img class="w3-center teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn">
         <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
         <h4 class="w3-center">Director, Programmer, Designer</h4>
