--- a/team.html
+++ b/team.html
@@ -69,8 +69,8 @@
 
      <!-- Team Photos -->
     <div class="w3-row">
-      <div class="w3-col w3-container w3-third w3-center">
-        <img class="w3-center teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn">
+      <div class="w3-col w3-container w3-third">
+        <div class="w3-center"><img class="teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn"></div>
         <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
         <h4 class="w3-center">Director, Programmer, Designer</h4>
         <p class="w3-center">Abbygale is the founder</p>
@@ -79,7 +79,7 @@
       </div>
       
       <div class="w3-col w3-container w3-third teamPlace">
-        <img class="w3-center teamImage" src="Images/AbbyJPG.jpg" alt="Jack Edwards">
+        <div class="w3-center"><img class="teamImage" src="Images/Abby.JPG" alt="Jack Edwards"></div>
         <h2 class="w3-center"><b>Jack Edwards</b></h2>
         <h4 class="w3-center">Animator, Designer</h4>
         <p class="w3-center">Jack</p>
@@ -88,7 +88,7 @@
       </div>
       
       <div class="w3-col w3-container w3-third teamPlace">
-        <img class="w3-center teamImage" src="Images/AbbyJPG.jpg" alt="Mary-Jane Law">
+        <div class="w3-center"><img class="teamImage" src="Images/Abby.JPG" alt="Mary-Jane Law"></div>
         <h2 class="w3-center"><b>Mary-Jane Law</b></h2>
         <h4 class="w3-center">Programmer, Designer</h4>
         <p class="w3-center">Mary</p>
