--- a/team.html
+++ b/team.html
@@ -122,7 +122,7 @@
         <h4 class="w3-center">Concept Artist, Designer</h4>
         <p class="w3-center">Bryn</p>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><p class="teamFollow">Follow on:</p></a>
-        <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="socialLink" src="Images/BlueSky Logo.png"></a>
+        <a href="https://beacons.ai/Island_Tiger" target="_blank"><img class="socialLink" src="Images/Bluesky Logo.png"></a>
       </div>
     </div>
     
