--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
         <div class="w3-center"><img class="teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn"></div>
-        <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
+        <h2 class="w3-center" style="background-color:#c7a6cf;"><b>Abbygale Dunn</b></h2>
         <h4 class="w3-center">Director, Programmer, Designer</h4>
         <p class="w3-center">Abbygale is the founder</p>
         <a href="https://beacons.ai/Island_Tiger" target="_blank"><p class="teamFollow">Follow on:</p></a>
