--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
      <!-- Team Photos -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
-        <div class="w3-center"><img class="teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn"></div>
+        <div class="w3-center" style="background-color:#c7a6cf;"><img class="teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn"></div>
         <h2 class="w3-center" style="background-color:#c7a6cf;"><b>Abbygale Dunn</b></h2>
         <h4 class="w3-center">Director, Programmer, Designer</h4>
         <p class="w3-center">Abbygale is the founder</p>
