--- a/team.html
+++ b/team.html
@@ -70,9 +70,11 @@
      <!-- Team Photos -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
-        <div class="w3-center" style="background-color:#c7a6cf;"><img class="teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn"></div>
-        <h2 class="w3-center" style="background-color:#c7a6cf;"><b>Abbygale Dunn</b></h2>
-        <h4 class="w3-center">Director, Programmer, Designer</h4>
+        <div style="width:400px; height:500px;">
+          <div class="w3-center" style="background-color:#c7a6cf;"><img class="teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn"></div>
+          <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
+          <h4 class="w3-center">Director, Programmer, Designer</h4>
+        </div>
         <p class="w3-center">Abbygale is the founder</p>
         <a href="https://www.linkedin.com/in/abbygaledunn/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/abbygaledunn/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
