--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
      <!-- Team Photos -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
-        <div class="w3-center" style="width:400px; height:500px; background-color:#c7a6cf;">
+        <div class="highlight-box w3-center">
           <div class="w3-center"><img class="teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn"></div>
           <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
           <h4 class="w3-center">Director, Programmer, Designer</h4>
