--- a/team.html
+++ b/team.html
@@ -75,7 +75,9 @@
           <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
           <h4 class="w3-center">Director, Programmer, Designer</h4>
         </div>
-        <p class="w3-center">Abbygale is the founder</p>
+        <p class="w3-center">Role - As the founder and director of Astral Forge, Abbygale focuses on building the company and business whilst also being a programmer and designer on our games.</p>
+        <p class="w3-center">Why she makes Games - "When I was a child I felt most at home and comfortable when I was playing video games and I want to give that experience to the world. That is what Astral Forge is about."</p>
+        <p class="w3-center">Favourite Game - The Witcher: Enhanched Edition</p>
         <a href="https://www.linkedin.com/in/abbygaledunn/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/abbygaledunn/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
@@ -85,6 +87,7 @@
         <h2 class="w3-center"><b>Jack Edwards</b></h2>
         <h4 class="w3-center">Animator, Designer</h4>
         <p class="w3-center">Jack</p>
+        <p class="w3-center">Favourite Game: ---</p>
         <a href="https://www.linkedin.com/in/theomaht/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/theomaht/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
@@ -94,6 +97,7 @@
         <h2 class="w3-center"><b>Mary-Jane Law</b></h2>
         <h4 class="w3-center">Programmer, Designer</h4>
         <p class="w3-center">Mary</p>
+        <p class="w3-center">Favourite Game: ---</p>
         <a href="https://www.linkedin.com/in/maryjanelaw/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/maryjanelaw/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
@@ -105,6 +109,7 @@
         <h2 class="w3-center"><b>Tommy Doherty</b></h2>
         <h4 class="w3-center">3D Environment Artist, Designer</h4>
         <p class="w3-center">Tommy</p>
+        <p class="w3-center">Favourite Game: ---</p>
         <a href="https://www.linkedin.com/in/tommy-doherty-72543632b/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/tommy-doherty-72543632b/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
@@ -114,6 +119,7 @@
         <h2 class="w3-center"><b>Joseph Jefferies</b></h2>
         <h4 class="w3-center">Animator, Designer</h4>
         <p class="w3-center">Joe</p>
+        <p class="w3-center">Favourite Game: ---</p>
         <a href="https://www.linkedin.com/in/josephj2004/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/josephj2004/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
@@ -123,6 +129,7 @@
         <h2 class="w3-center"><b>Bryn Allen</b></h2>
         <h4 class="w3-center">Concept Artist, Designer</h4>
         <p class="w3-center">Bryn</p>
+        <p class="w3-center">Favourite Game: ---</p>
         <a href="https://bsky.app/profile/ballenart.bsky.social" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://bsky.app/profile/ballenart.bsky.social" target="_blank"><img class="socialLink" src="Images/Bluesky Logo.png"></a>
       </div>
