--- a/team.html
+++ b/team.html
@@ -75,9 +75,9 @@
           <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
           <h4 class="w3-center">Director, Programmer, Designer</h4>
         </div>
-        <p class="w3-center">Role - As the founder and director of Astral Forge, Abbygale focuses on building the company and business whilst also being a programmer and designer on our games.</p>
-        <p class="w3-center">Why she makes Games - "When I was a child I felt most at home and comfortable when I was playing video games and I want to give that experience to the world. That is what Astral Forge is about."</p>
-        <p class="w3-center">Favourite Game - The Witcher: Enhanched Edition</p>
+        <p class="w3-center"><b>Role</b> - As the founder and director of Astral Forge, Abbygale focuses on building the company and business whilst also being a programmer and designer on our games.</p>
+        <p class="w3-center"><b>Why she makes Games -</b> "When I was a child I felt most at home and comfortable when I was playing video games and I want to give that experience to the world. That is what Astral Forge is about."</p>
+        <p class="w3-center"><b>Favourite Game -</b> The Witcher: Enhanched Edition</p>
         <a href="https://www.linkedin.com/in/abbygaledunn/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/abbygaledunn/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
