--- a/team.html
+++ b/team.html
@@ -88,7 +88,7 @@
         <h4 class="w3-center">Animator, Designer</h4>
         <p class="w3-center"><b>Role -</b> ---</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
-        <p class="w3-center"><b>Favourite Game -</b> ---</p>
+        <p class="w3-center"><b>Favourite Game -</b> The Legend of Zelda: Ocarina of Time</p>
         <a href="https://www.linkedin.com/in/theomaht/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/theomaht/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
       </div>
