--- a/team.html
+++ b/team.html
@@ -88,7 +88,7 @@
           <h2 class="w3-center"><b>Jack Edwards</b></h2>
           <h4 class="w3-center">Animator, Designer</h4>
         </div>
-        <p class="w3-center"><b>Role -</b> ---</p>
+        <p class="w3-center"><b>Role -</b> Jack is the cinematic animator for Astral Forge. He creates the stories and emotion in the game to captivate and immerse audiences.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> The Legend of Zelda: Ocarina of Time</p>
         <a class="w3-center" href="https://www.linkedin.com/in/theomaht/" target="_blank"><p class="teamFollow">Follow on:</p></a>
@@ -101,7 +101,7 @@
           <h2 class="w3-center"><b>Mary-Jane Law</b></h2>
           <h4 class="w3-center">Programmer, Designer</h4>
         </div>
-        <p class="w3-center"><b>Role -</b> ---</p>
+        <p class="w3-center"><b>Role -</b> Mary-Jane is a designer and programmer for Astral Forge, she creates the games as you know it. The world and feel of the game is due to her imagination and talent.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
         <a class="w3-center" href="https://www.linkedin.com/in/maryjanelaw/" target="_blank"><p class="teamFollow">Follow on:</p></a>
@@ -116,7 +116,7 @@
           <h2 class="w3-center"><b>Tommy Doherty</b></h2>
           <h4 class="w3-center">3D Environment Artist, Designer</h4>
         </div>
-        <p class="w3-center"><b>Role -</b> ---</p>
+        <p class="w3-center"><b>Role -</b> Tommy is the 3D artist for Astral Forge. His world is what you experience and explore in our games and each small set dressing is his expert creation.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
         <a class="w3-center" href="https://www.linkedin.com/in/tommy-doherty-72543632b/" target="_blank"><p class="teamFollow">Follow on:</p></a>
@@ -129,7 +129,7 @@
           <h2 class="w3-center"><b>Joseph Jefferies</b></h2>
           <h4 class="w3-center">Animator, Designer</h4>
         </div>
-        <p class="w3-center"><b>Role -</b> ---</p>
+        <p class="w3-center"><b>Role -</b> Joe is our technical animator in Astral Forge. The interactions that you witness and the small changes in animation is his </p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
         <a class="w3-center" href="https://www.linkedin.com/in/josephj2004/" target="_blank"><p class="teamFollow">Follow on:</p></a>
