--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@
           <h2 class="w3-center"><b>Jack Edwards</b></h2>
           <h4 class="w3-center">Animator, Designer</h4>
         </div>
-        <p class="w3-center"><b>Role -</b> Jack is the cinematic animator for Astral Forge. He creates the stories and emotion in the game to captivate and immerse audiences.</p>
+        <p class="w3-center"><b>Role -</b> Jack is the cinematic animator for Astral Forge. He creates the stories and emotion in the game to captivate, immerse and engage the audience.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> The Legend of Zelda: Ocarina of Time</p>
         <a class="w3-center" href="https://www.linkedin.com/in/theomaht/" target="_blank"><p class="teamFollow">Follow on:</p></a>
@@ -130,7 +130,7 @@
           <h2 class="w3-center"><b>Joseph Jefferies</b></h2>
           <h4 class="w3-center">Animator, Designer</h4>
         </div>
-        <p class="w3-center"><b>Role -</b> Joe is our technical animator in Astral Forge. The interactions that you witness and the small changes in animation is his </p>
+        <p class="w3-center"><b>Role -</b> Joe is our technical animator in Astral Forge. He works on the interactions and movement from our characters and makes the world feel alive.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
         <a class="w3-center" href="https://www.linkedin.com/in/josephj2004/" target="_blank"><p class="teamFollow">Follow on:</p></a>
@@ -143,7 +143,7 @@
           <h2 class="w3-center"><b>Bryn Allen</b></h2>
           <h4 class="w3-center">Concept Artist, Designer</h4>
         </div>
-        <p class="w3-center"><b>Role -</b> ---</p>
+        <p class="w3-center"><b>Role -</b> Bryn is the concept artist for Astral Forge. What you see is his vision and design with every creature and object having his passion and thought behind it.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
         <a class="w3-center" href="https://bsky.app/profile/ballenart.bsky.social" target="_blank"><p class="teamFollow">Follow on:</p></a>
