--- a/team.html
+++ b/team.html
@@ -130,7 +130,7 @@
           <h2 class="w3-center"><b>Joseph Jefferies</b></h2>
           <h4 class="w3-center">Animator, Designer</h4>
         </div>
-        <p class="w3-center"><b>Role -</b> Joe is our technical animator in Astral Forge. He works on the interactions and movement from our characters and makes the world feel alive.</p>
+        <p class="w3-center"><b>Role -</b> Joe is our technical animator in Astral Forge. He works on the interactions and movement for our characters and makes the world feel alive.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
         <a class="w3-center" href="https://www.linkedin.com/in/josephj2004/" target="_blank"><p class="teamFollow">Follow on:</p></a>
