--- a/team.html
+++ b/team.html
@@ -90,7 +90,7 @@
           <h4 class="w3-center">Animator, Designer</h4>
         </div>
         <p class="w3-center"><b>Role -</b> Jack is the cinematic animator for Astral Forge. He creates the stories and emotion in the game to captivate, immerse and engage the audience.</p>
-        <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
+        <p class="w3-center"><b>Why I Make Games -</b> "I love the unique feeling and experiences that you get from video games and their stories that you become a part of and I want to give that to other people."</p>
         <p class="w3-center"><b>Favourite Game -</b> The Legend of Zelda: Ocarina of Time</p>
         <a class="w3-center" href="https://www.linkedin.com/in/theomaht/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/theomaht/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
