--- a/team.html
+++ b/team.html
@@ -80,6 +80,12 @@
         <p class="w3-center"><b>Favourite Game -</b> The Witcher: Enhanched Edition</p>
         <a class="w3-center" href="https://www.linkedin.com/in/abbygaledunn/" target="_blank"><p class="teamFollow">Follow on:</p></a>
         <a href="https://www.linkedin.com/in/abbygaledunn/" target="_blank"><img class="socialLink" src="Images/LinkedInLogo.png"></a>
+        <div class="w3-center" style="display:inline-flex;">
+          <a class="teamFollowLink" href="https://www.linkedin.com/in/josephj2004/" target="_blank">
+            <span class="teamFollow">Follow on:</span>
+            <img class="teamFollowLink" src="Images/LinkedInLogo.png" alt="LinkedIn logo">
+          </a>
+        </div>
         
       </div>
       
