--- a/team.html
+++ b/team.html
@@ -78,13 +78,12 @@
         <p class="w3-center"><b>Role -</b> As the founder and director of Astral Forge, Abbygale focuses on building the company and business whilst also being a programmer and designer on our games.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "When I was a child I felt most at home and like myself when I was playing video games and I want to give that experience to the world. That is what Astral Forge is about."</p>
         <p class="w3-center"><b>Favourite Game -</b> The Witcher: Enhanched Edition</p>
-        <div class="w3-center" style="display:inline-flex;">
+        <div style="display:flex; justify-content:center; align-items:center;">
           <a class="teamFollowLink" href="https://www.linkedin.com/in/abbygaledunn/" target="_blank">
             <span class="teamFollow">Follow on:</span>
             <img class="socialLink" src="Images/LinkedInLogo.png" alt="LinkedIn logo">
           </a>
         </div>
-        
       </div>
       
       <div class="w3-col w3-container w3-third teamPlace">
@@ -96,7 +95,7 @@
         <p class="w3-center"><b>Role -</b> Jack is the cinematic animator for Astral Forge. He creates the stories and emotion in the game to captivate, immerse and engage the audience.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "I love the stories that can be told in video games. The player really gets to experience and become part of them and that is truly special. I want to be able to create these stories for other people to enjoy like I do."</p>
         <p class="w3-center"><b>Favourite Game -</b> The Legend of Zelda: Ocarina of Time</p>
-        <div class="w3-center" style="display:inline-flex;">
+        <div style="display:flex; justify-content:center; align-items:center;">
           <a class="teamFollowLink" href="https://www.linkedin.com/in/theomaht/" target="_blank">
             <span class="teamFollow">Follow on:</span>
             <img class="socialLink" src="Images/LinkedInLogo.png" alt="LinkedIn logo">
@@ -113,7 +112,7 @@
         <p class="w3-center"><b>Role -</b> Mary-Jane is a designer and programmer for Astral Forge, she creates the games as you know it. The world and feel of the game is due to her imagination and talent.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
-        <div class="w3-center" style="display:inline-flex;">
+        <div style="display:flex; justify-content:center; align-items:center;">
           <a class="teamFollowLink" href="https://www.linkedin.com/in/maryjanelaw/" target="_blank">
             <span class="teamFollow">Follow on:</span>
             <img class="socialLink" src="Images/LinkedInLogo.png" alt="LinkedIn logo">
@@ -132,7 +131,7 @@
         <p class="w3-center"><b>Role -</b> Tommy is the 3D artist for Astral Forge. His world is what you experience and explore in our games and each small set dressing is his expert creation.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
-        <div class="w3-center" style="display:inline-flex;">
+        <div style="display:flex; justify-content:center; align-items:center;">
           <a class="teamFollowLink" href="https://www.linkedin.com/in/tommy-doherty-72543632b/" target="_blank">
             <span class="teamFollow">Follow on:</span>
             <img class="socialLink" src="Images/LinkedInLogo.png" alt="LinkedIn logo">
@@ -149,7 +148,7 @@
         <p class="w3-center"><b>Role -</b> Joe is our technical animator in Astral Forge. He works on the interactions and movement for our characters and makes the world feel alive.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
-        <div class="w3-center" style="display:inline-flex;">
+        <div style="display:flex; justify-content:center; align-items:center;">
           <a class="teamFollowLink" href="https://www.linkedin.com/in/josephj2004/" target="_blank">
             <span class="teamFollow">Follow on:</span>
             <img class="socialLink" src="Images/LinkedInLogo.png" alt="LinkedIn logo">
@@ -166,7 +165,7 @@
         <p class="w3-center"><b>Role -</b> Bryn is the concept artist for Astral Forge. What you see is his vision and design with every creature and object having his passion and thought behind it.</p>
         <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
         <p class="w3-center"><b>Favourite Game -</b> ---</p>
-        <div class="w3-center" style="display:inline-flex;">
+        <div style="display:flex; justify-content:center; align-items:center;">
           <a class="teamFollowLink" href="https://bsky.app/profile/ballenart.bsky.social" target="_blank">
             <span class="teamFollow">Follow on:</span>
             <img class="socialLink" src="Images/Bluesky Logo.png"">
