--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:10px; text-align:center;">We want to hone that passion and turn it into something that everyone can experience and enjoy. It 
         is what makes us and the games that we create so unique. As a studio, we have one mission: make the best video games we can!</p>
       <!-- Read More button -->
-      <div class="w3-center"><a class="w3-round readMoreButton" href="index.html">Read More</a></div>
+      <div class="w3-center"><a class="w3-round readMoreButton" href="games.html">Read More</a></div>
       <br class="w3-hide-large w3-hide-medium">
     </div>
 
