--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,8 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
 
+  <h1>CONTACT US</h1>  
+    
     </main>
 
 <!-- Footer -->
