--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
 
-  <h1>CONTACT US</h1>  
+  <h1 style="padding-top:80px;">CONTACT US</h1>  
     
     </main>
 
