--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,16 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
 
-  <h1 style="padding-top:80px;">CONTACT US</h1>  
+    <div style="padding-top:80px;" class="w3-center">
+      <h1><b>CONTACT US</b></h1>  
+      <br><br>
+  
+      <h3>Email:</h3>
+  
+      <h3>Social Media:</h3>
+  
+      <h3>Mailing List:</h3>
+    </div>
     
     </main>
 
