--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
       <h1><b>CONTACT US</b></h1>  
       <br><br>
   
-      <h3>Email:</h3>
+      <h3>Email:  astralforge@outlook.com</h3>
   
       <h3>Social Media:</h3>
   
