--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,7 @@
       <h3>Social Media:</h3>
   
       <h3>Mailing List:</h3>
+      <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script><iframe src="https://subscribe-forms.beehiiv.com/96ce1856-78e9-4102-88e2-531e960b8f14" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: ; height: ; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000;"></iframe>
     </div>
     
     </main>
