--- a/contact.html
+++ b/contact.html
@@ -68,12 +68,19 @@
       <h1><b>CONTACT US</b></h1>  
       <br><br>
   
-      <h3>Email:  astralforge@outlook.com</h3>
+      <h3>Email:</h3>
+      <h2>astralforge@outlook.com
   
       <h3>Social Media:</h3>
+      <a href="https://www.instagram.com/astralforgeofficial/" target="_blank"><img class="socialFooterLarge" src="Images/InstagramLogo.png" alt="Link to Instagram."></a>
+      <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank" style="padding:5px;"><img class="socialFooterLarge" src="Images/Bluesky Logo.png" alt="Link to BlueSky."></a>
+      <a href="https://www.tiktok.com/@astralforgeofficial" target="_blank"><img class="socialFooterLarge" src="Images/TikTokLogo.png" alt="Link to TikTok."></a>
   
       <h3>Mailing List:</h3>
-      <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script><iframe src="https://subscribe-forms.beehiiv.com/96ce1856-78e9-4102-88e2-531e960b8f14" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: ; height: ; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000;"></iframe>
+      <br>
+      <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script>
+      <iframe src="https://subscribe-forms.beehiiv.com/96ce1856-78e9-4102-88e2-531e960b8f14" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: ; height: ; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000;"></iframe>
+      <br><br>
     </div>
     
     </main>
