--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
       <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank" style="padding:25px;"><img class="socialFooterLarge" src="Images/Bluesky Logo.png" alt="Link to BlueSky."></a>
       <a href="https://www.tiktok.com/@astralforgeofficial" target="_blank"><img class="socialFooterLarge" src="Images/TikTokLogo.png" alt="Link to TikTok."></a>
       <br>
-      <a href="https://beacons.ai/astralforge" target="_blank" class="qLinks" style="padding-top:20px;">Click Here to Access Our Beacons Page</a>
+      <a href="https://beacons.ai/astralforge" target="_blank" class="contactLinks" style="padding-top:20px;">Click Here to Access Our Beacons Page</a>
       <br><br><br>
   
       <h3><u>Mailing List:</u></h3>
