--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <!-- Jquery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+  <!-- Adobe Fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/style.css">
+
 </head>
 
 <body>
