--- a/team.html
+++ b/team.html
@@ -78,14 +78,16 @@
           <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
           <h4 class="w3-center">Director, Programmer, Designer</h4>
         </div>
-        <p class="w3-center"><b>Role -</b> As the founder and director of Astral Forge, Abbygale focuses on building the company and business whilst also being a programmer and designer on our games.</p>
-        <p class="w3-center"><b>Why I Make Games -</b> "When I was a child I felt most at home and like myself when I was playing video games and I want to give that experience to the world. That is what Astral Forge is about."</p>
-        <p class="w3-center"><b>Favourite Game -</b> The Witcher: Enhanched Edition</p>
-        <div style="display:flex; justify-content:center; align-items:center;">
-          <a class="teamFollowLink" href="https://www.linkedin.com/in/abbygaledunn/" target="_blank">
-            <span class="teamFollow">Follow on:</span>
-            <img class="socialLink" src="Images/LinkedInLogo.png" alt="LinkedIn logo">
-          </a>
+        <div class="highlight-box2 w3-center">
+          <p class="w3-center"><b>Role -</b> As the founder and director of Astral Forge, Abbygale focuses on building the company and business whilst also being a programmer and designer on our games.</p>
+          <p class="w3-center"><b>Why I Make Games -</b> "When I was a child I felt most at home and like myself when I was playing video games and I want to give that experience to the world. That is what Astral Forge is about."</p>
+          <p class="w3-center"><b>Favourite Game -</b> The Witcher: Enhanched Edition</p>
+          <div style="display:flex; justify-content:center; align-items:center;">
+            <a class="teamFollowLink" href="https://www.linkedin.com/in/abbygaledunn/" target="_blank">
+              <span class="teamFollow">Follow on:</span>
+              <img class="socialLink" src="Images/LinkedInLogo.png" alt="LinkedIn logo">
+            </a>
+          </div>
         </div>
       </div>
       
