--- a/team.html
+++ b/team.html
@@ -73,12 +73,12 @@
      <!-- Team Photos -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
-        <div class="highlight-box w3-center">
+        <div class="highlight-box w3-left">
           <div class="w3-center"><img class="teamImage" src="Images/Abby.JPG" alt="Abbygale Dunn"></div>
           <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
           <h4 class="w3-center">Director, Programmer, Designer</h4>
         </div>
-        <div class="highlight-box2 w3-center">
+        <div class="highlight-box2 w3-right">
           <p class="w3-center"><b>Role -</b> As the founder and director of Astral Forge, Abbygale focuses on building the company and business whilst also being a programmer and designer on our games.</p>
           <p class="w3-center"><b>Why I Make Games -</b> "When I was a child I felt most at home and like myself when I was playing video games and I want to give that experience to the world. That is what Astral Forge is about."</p>
           <p class="w3-center"><b>Favourite Game -</b> The Witcher: Enhanched Edition</p>
