--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Adobe Fonts -->
-  <link rel="stylesheet" href="https://use.typekit.net/style.css">
+  <link rel="stylesheet" href="https://fonts.adobe.com/fonts/arsenica-variable#fonts-section">
 
 </head>
 
