--- a/team.html
+++ b/team.html
@@ -78,6 +78,7 @@
           <h2 class="w3-center"><b>Abbygale Dunn</b></h2>
           <h4 class="w3-center">Director, Programmer, Designer</h4>
         </div>
+        <br class="w3-hide-large">
         <div class="highlight-box2 w3-right">
           <p class="w3-center"><b>Role -</b> As the founder and director of Astral Forge, Abbygale focuses on building the company and business whilst also being a programmer and designer on our games.</p>
           <p class="w3-center"><b>Why I Make Games -</b> "When I was a child I felt most at home and like myself when I was playing video games and I want to give that experience to the world. That is what Astral Forge is about."</p>
