--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,11 @@
 <!----------------------------------------------------------------------------- -->
 
     <div class="w3-row">
-      <div style="padding-top:80px;" class="w3-center">
+      <div class="w3-third"></div>
+    </div>
+    
+    <div class="w3-row">
+      <div style="padding-top:80px;" class="w3-center w3-third">
         <h1><b>CONTACT US</b></h1>  
         <br><br>
     
