--- a/contact.html
+++ b/contact.html
@@ -67,13 +67,13 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
 
-    <div class="w3-row">
+    <div class="w3-col">
       <div class="w3-third">
          <div><img id="bottom" style="height:100%; position:relative;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
       </div>
     </div>
     
-    <div class="w3-row">
+    <div class="w3-col">
       <div style="padding-top:80px;" class="w3-center w3-third">
         <h1><b>CONTACT US</b></h1>  
         <br><br>
@@ -100,7 +100,7 @@
       </div>
     </div>
 
-    <div class="w3-row">
+    <div class="w3-col">
       <div class="w3-third">
          <div><img id="bottom" style="height:100%; position:relative;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
       </div>
