--- a/contact.html
+++ b/contact.html
@@ -67,13 +67,11 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
 
-    <div class="w3-col">
+    <div class="w3-row">
       <div class="w3-third">
          <div><img id="bottom" style="height:100%; position:relative;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
       </div>
-    </div>
     
-    <div class="w3-col">
       <div style="padding-top:80px;" class="w3-center w3-third">
         <h1><b>CONTACT US</b></h1>  
         <br><br>
@@ -98,9 +96,7 @@
         <iframe src="https://subscribe-forms.beehiiv.com/96ce1856-78e9-4102-88e2-531e960b8f14" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: ; height: ; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000;"></iframe>
         <br><br>
       </div>
-    </div>
-
-    <div class="w3-col">
+    
       <div class="w3-third">
          <div><img id="bottom" style="height:100%; position:relative;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
       </div>
