--- a/contact.html
+++ b/contact.html
@@ -93,13 +93,7 @@
         <h3><u><b>Mailing List:</b></u></h3>
         <br>
         <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script>
-        <iframe src="https://subscribe-forms.beehiiv.com/96ce1856-78e9-4102-88e2-531e960b8f14" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="display: block;
-    margin: 0 auto;
-    width: 100%; /* or a fixed width like 600px */
-    max-width: 600px; /* optional: keep it from being too wide */
-    border-radius: 0;
-    background-color: transparent;
-    box-shadow: none;"></iframe>
+        <iframe src="https://subscribe-forms.beehiiv.com/96ce1856-78e9-4102-88e2-531e960b8f14" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: ; height: ; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000;"></iframe>
         <br><br>
       </div>
     
