--- a/games.html
+++ b/games.html
@@ -67,7 +67,7 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
 
-    <div><img id="bottom" style="height:auto; width:100%; position:absolute;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
+    <div><img id="bottom" style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
     <h1> To Be Announced.......</h1>
   
   </main>
