--- a/games.html
+++ b/games.html
@@ -67,8 +67,8 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
 
-    <div><img id="bottom" style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
-    <h1> To Be Announced.......</h1>
+    <div><img style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
+    <h1 class="w3-center"> To Be Announced.......</h1>
   
   </main>
 
