--- a/games.html
+++ b/games.html
@@ -67,7 +67,7 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
 
-    <div><img style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
+    <div><img style="height:500px; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
     <h1 class="w3-center"> To Be Announced.......</h1>
   
   </main>
