--- a/games.html
+++ b/games.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body>
+<body style="background-image: src('Images/AstralForge_LightConstellationPattern.svg');">
   <script src="script.js"></script>
   <main>
 
@@ -66,9 +66,7 @@
 
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
-
-    <div><img style="height:500px; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
-    <h1 class="w3-center"> To Be Announced.......</h1>
+  <h1 class="w3-center"> To Be Announced.......</h1>
   
   </main>
 
