--- a/games.html
+++ b/games.html
@@ -66,7 +66,9 @@
 
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
-  <h1 class="w3-center"> To Be Announced.......</h1>
+    <div style="height:600px">
+      <h1 class="w3-center"> To Be Announced.......</h1>
+    </div>
   
   </main>
 
