--- a/games.html
+++ b/games.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body style="background-image: src('Images/AstralForge_LightConstellationPattern.svg');">
+<body style="background-image: url('Images/AstralForge_LightConstellationPattern.svg');">
   <script src="script.js"></script>
   <main>
 
@@ -67,7 +67,7 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
     <div style="height:600px">
-      <h1 class="w3-center"> To Be Announced.......</h1>
+      <h1 class="w3-center" style="padding-top:100px;"> To Be Announced.......</h1>
     </div>
   
   </main>
