--- a/contact.html
+++ b/contact.html
@@ -88,6 +88,8 @@
         <br><br><br>
     
         <h3><u><b>Mailing List:</b></u></h3>
+        <br><br>
+        <a href="https://astralforge.beehiiv.com/subscribe" target="_blank" class="contactLinks" style="padding-top:20px;">Click Here to SignUp</a>
         
         <br><br>
       </div>
