--- a/team.html
+++ b/team.html
@@ -138,8 +138,8 @@
         </div>
         <div class="highlight-box2 w3-right">
           <p class="w3-center"><b>Role -</b> Tommy is the 3D artist for Astral Forge. His world is what you experience and explore in our games and each small set dressing is his expert creation.</p>
-          <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
-          <p class="w3-center"><b>Favourite Game -</b> ---</p>
+          <p class="w3-center"><b>Why I Make Games -</b> "I have always been fascinated by the large open world games that use the environment to tell a story. I want to make games so that I can create those kind of worlds. A game world that feels alive."</p>
+          <p class="w3-center"><b>Favourite Game -</b> Mordhau</p>
           <div style="display:flex; justify-content:center; align-items:center;">
             <a class="teamFollowLink" href="https://www.linkedin.com/in/tommy-doherty-72543632b/" target="_blank">
               <span class="teamFollow">Follow on:</span>
