--- a/team.html
+++ b/team.html
@@ -115,8 +115,8 @@
         </div>
         <div class="highlight-box2 w3-right">
           <p class="w3-center"><b>Role -</b> Mary-Jane is a designer and programmer for Astral Forge, she creates the games as you know it. The world and feel of the game is due to her imagination and talent.</p>
-          <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
-          <p class="w3-center"><b>Favourite Game -</b> ---</p>
+          <p class="w3-center"><b>Why I Make Games -</b> "I'm driven by my passion for storytelling and exploring the psychology behind it. I want to make people connect with my projects on a deeper level. "</p>
+          <p class="w3-center"><b>Favourite Game -</b> Darkest dungeon II</p>
           <div style="display:flex; justify-content:center; align-items:center;">
             <a class="teamFollowLink" href="https://www.linkedin.com/in/maryjanelaw/" target="_blank">
               <span class="teamFollow">Follow on:</span>
