--- a/team.html
+++ b/team.html
@@ -109,7 +109,7 @@
       
       <div class="w3-col w3-container w3-third teamPlace">
         <div class="highlight-box w3-left">
-          <div class="w3-center"><img class="teamImage" src="Images/Cat.png" alt="Mary-Jane Law"></div>
+          <div class="w3-center"><img class="teamImage" src="Images/Mary.jpg" alt="Mary-Jane Law"></div>
           <h2 class="w3-center"><b>Mary-Jane Law</b></h2>
           <h4 class="w3-center">Programmer, Designer</h4>
         </div>
