--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Adding a favicon -->
   <link rel="icon" href="Images/Favicon.png">
   <!-- Adding an apple touch icon -->
-  <link rel="apple-touch-icon" href="Images/AstralForge_LightVertical.svg">
+  <link rel="apple-touch-icon" href="Images/Favicon.png">
 
   <!-- Adding the css style sheets -->
   <link href="style.css" rel="stylesheet" type="text/css" />
