--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
       <p class="w3-center w3-hide-small" style="font-size:20px;">The studio is home to some of the industry’s finest, professionals from all over the
         country with a shared love of gaming.</p>
       <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:15px; text-align:center;">The studio is home to some of the industry’s finest, professionals from all over the
-        country with a shared love of gaming.</p>
+        UK with a shared love of gaming.</p>
       
-      <p class="w3-center w3-hide-small" style="font-size:15px;">As a small studio Astral Forge is place that allows every member of the team to be themselves and showcase their talent
+      <p class="w3-center w3-hide-small" style="font-size:15px;">As a small studio, Astral Forge is place that allows every member of the team to be themselves and showcase their talent
         and skill in the projects that we create. Every member of the team has a say over the design of the game, and you can find each person's unique influence all throughout the projects that we create.</p>
-      <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:10px; text-align:center;">As a small studio Astral Forge is place that allows every member of the team to be themselves and showcase their 
+      <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:10px; text-align:center;">As a small studio, Astral Forge is place that allows every member of the team to be themselves and showcase their 
         talent and skill in the projects that we create. Every member of the team has a say over the design of the game, and you can find each person's unique influence all throughout the projects that we create.</p>
       <!-- Read More button -->
       <div class="w3-center"><a class="w3-round readMoreButton" href="team.html">Read More</a></div>
