--- a/team.html
+++ b/team.html
@@ -90,7 +90,7 @@
       
       <div class="w3-col w3-container w3-third teamPlace">
         <div class="highlight-box w3-left">
-          <div class="w3-center"><img class="teamImage" src="Images/Jack.JPG" alt="Jack Edwards"></div>
+          <div class="w3-center"><img class="teamImage" src="Images/Jack.jpg" alt="Jack Edwards"></div>
           <h2 class="w3-center"><b>Jack Edwards</b></h2>
           <h4 class="w3-center">Animator, Designer</h4>
         </div>
