--- a/team.html
+++ b/team.html
@@ -159,7 +159,7 @@
           <p class="w3-center"><b>Role -</b> Joe is our technical animator in Astral Forge. He works on the interactions and movement for our characters and makes the world feel alive.</p>
           <p class="w3-center"><b>Why I Make Games -</b> "I love the technical side of games, figuring out how a game can be put together to provide an experience that can be unique to each player that plays it. 
             I want to be able to provide that same feeling to others after experiencing it so many times myself."</p>
-          <p class="w3-center"><b>Favourite Game -</b> ---</p>
+          <p class="w3-center"><b>Favourite Game -</b> Hearts of Iron IV</p>
           <div style="display:flex; justify-content:center; align-items:center;">
             <a class="teamFollowLink" href="https://www.linkedin.com/in/josephj2004/" target="_blank">
               <span class="teamFollow">Follow on:</span>
