--- a/team.html
+++ b/team.html
@@ -132,7 +132,7 @@
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
         <div class="highlight-box w3-left">
-          <div class="w3-center"><img class="teamImage" src="Images/Eagle.jpg" alt="Tommy Doherty"></div>
+          <div class="w3-center"><img class="teamImage" src="Images/Tommy.jpg" alt="Tommy Doherty"></div>
           <h2 class="w3-center"><b>Tommy Doherty</b></h2>
           <h4 class="w3-center">3D Environment Artist, Designer</h4>
         </div>
