--- a/team.html
+++ b/team.html
@@ -151,7 +151,7 @@
       
       <div class="w3-col w3-container w3-third teamPlace">
         <div class="highlight-box w3-left">
-          <div class="w3-center"><img class="teamImage" src="Images/Beaver.jpg" alt="Joseph Jefferies"></div>
+          <div class="w3-center"><img class="teamImage" src="Images/Joe.jpg" alt="Joseph Jefferies"></div>
           <h2 class="w3-center"><b>Joseph Jefferies</b></h2>
           <h4 class="w3-center">Animator, Designer</h4>
         </div>
