--- a/games.html
+++ b/games.html
@@ -64,8 +64,11 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
     <div style="height:600px">
-      <h1 class="w3-center" style="padding-top:100px;"> To Be Announced.......</h1>
+      <h1 class="w3-center" style="padding-top:100px;"> Fate's Loop </h1>
     </div>
+    <video width="320" height="240" controls>
+      <source src="FatesLoop.mp4" type="video/mp4">
+    </video>
   
   </main>
 
