--- a/games.html
+++ b/games.html
@@ -67,7 +67,7 @@
       <h1 class="w3-center" style="padding-top:100px;"> Fate's Loop </h1>
     </div>
     <video width="320" height="240" controls>
-      <source src="FatesLoop.mp4" type="video/mp4">
+      <source src="https://youtu.be/DDPGsVt02Wk/video.mp4" type="video/mp4">
     </video>
   
   </main>
