--- a/games.html
+++ b/games.html
@@ -66,7 +66,7 @@
     <div style="height:600px">
       <h1 class="w3-center" style="padding-top:100px;"> Fate's Loop </h1>
     </div>
-    <video width="320" height="240" controls>
+    <video width="960" height="540" controls class="w3-center">
       <source src="https://youtu.be/DDPGsVt02Wk/video.mp4" type="video/mp4">
     </video>
   
