--- a/games.html
+++ b/games.html
@@ -63,10 +63,12 @@
 
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
-    <div style="height:600px">
+    <div>
       <h1 class="w3-center" style="padding-top:100px;"> Fate's Loop </h1>
+
+      <iframe width="960" height="540" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
     </div>
-    <iframe width="960" height="540" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
+    
   
   </main>
 
