--- a/team.html
+++ b/team.html
@@ -171,7 +171,7 @@
       
       <div class="w3-col w3-container w3-third teamPlace">
         <div class="highlight-box w3-left">
-          <div class="w3-center"><img class="teamImage" src="Images/Seal.jpg" alt="Bryn Allen"></div>
+          <div class="w3-center"><img class="teamImage" src="Images/Bryn.jpg" alt="Bryn Allen"></div>
           <h2 class="w3-center"><b>Bryn Allen</b></h2>
           <h4 class="w3-center">Concept Artist, Designer</h4>
         </div>
