--- a/team.html
+++ b/team.html
@@ -177,8 +177,8 @@
         </div>
         <div class="highlight-box2 w3-right">
           <p class="w3-center"><b>Role -</b> Bryn is the concept artist for Astral Forge. What you see is his vision and design with every creature and object having his passion and thought behind it.</p>
-          <p class="w3-center"><b>Why I Make Games -</b> "---"</p>
-          <p class="w3-center"><b>Favourite Game -</b> ---</p>
+          <p class="w3-center"><b>Why I Make Games -</b> "I make games because of the creativity you get to have in the design process, all the specific ways you can convey information to a player through visual elements and wow them with unique designs are only able to be captured in this medium."</p>
+          <p class="w3-center"><b>Favourite Game -</b> Portal 2 & Pikmin 4</p>
           <div style="display:flex; justify-content:center; align-items:center;">
             <a class="teamFollowLink" href="https://bsky.app/profile/ballenart.bsky.social" target="_blank">
               <span class="teamFollow">Follow on:</span>
