--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <img class="w3-image pictureOutline" style="height:300px" src="Images/ProtoPlayTeam.JPG" alt="The Team">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
-      <img class="w3-image pictureOutline" src="Images/The Team.png" alt="The Team" width="100%" height="200px">
+      <img class="w3-image pictureOutline" src="Images/ProtoPlayTeam.JPG" alt="The Team" width="100%" height="200px">
     </div>
 
     <!-- About Us section header -->
