--- a/games.html
+++ b/games.html
@@ -69,6 +69,12 @@
       <div style="text-align: center;" class="w3-center">
         <iframe class="pictureOutline" width="960" height="540" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
       </div>
+
+      <br><br>
+      
+      <div style="text-align: center;" class="w3-center">
+        <p>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</p>
+      </div>
     </div>
     
   
