--- a/games.html
+++ b/games.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body style="background-image: url('Images/AstralForge_LightConstellationPattern.svg');">
+<body>
   <script src="script.js"></script>
   <main>
 
@@ -63,12 +63,16 @@
 
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
-    <div>
-      <h1 class="w3-center" style="padding-top:100px;"> Fate's Loop </h1>
-
+ <!-- Header video -->
+  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:800px; overflow:hidden; padding-top:50px;">
       <div style="text-align: center;" class="w3-center">
         <iframe class="pictureOutline" width="960" height="540" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
       </div>
+    </div>
+  </header>
+    
+    <div>
+      <h1 class="w3-center" style="padding-top:100px;"> Fate's Loop </h1>
 
       <br><br>
       
