--- a/games.html
+++ b/games.html
@@ -71,12 +71,12 @@
   </header>
     
   <div>
-    <h1 class="w3-center" style="padding-top:50px;"> Fate's Loop </h1>
+    <h1 class="w3-center" style="padding-top:20px;"> Fate's Loop </h1>
 
     <br><br>
     
     <div style="text-align: center;" class="w3-center">
-      <h3>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</h2>
+      <h3><b>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</b></h2>
       <br>
       <p>Fate's Loop is a stylised medieval fantasy adventure where you must solve puzzles, fight monsters, build relationships, and more, in order to save the village of Farbell from a time loop curse.</p>
     </div>
